Alignment fixes

--- a/app/styles/_icons.scss
+++ b/app/styles/_icons.scss
@@ -3,11 +3,12 @@
   background-color: $background;
   font-weight: lighter;
   border: 1px solid $border;
-  border-radius: .7em;
+  border-radius: 50%;
   text-align: center;
-  font-size: 1.4em;
-  width: 1.4em;
-  line-height: 1.4em;
+  font-size: 1em;
+  width: 1.7em;
+  height: 1.7em;
+  line-height: 1.7em;
   display: inline-block;
 }
 
